[package]
name = "rkyv-scale-rlp"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2.1"
ethereum-types = { version = "0.14.0", features = ["codec"] }
fastrlp = { version = "0.2.1", features = ["derive", "ethereum-types", "ethbloom"] }
parity-scale-codec = { version = "3.2.1", features = ["derive"] }
rkyv = "0.7.39"
zstd = "0.11.2"
