[package]
name = "rkyv-scale-rlp"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2.1"
ethereum-types = { version = "0.14.0", features = ["codec"] }
fastrlp = { version = "0.2.1", features = ["derive", "ethereum-types", "ethbloom", "alloc"] }
hex = "0.4.3"
once_cell = "1.15.0"
parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
rkyv = "0.7.39"
rlp = "0.5.1"
ruint = { git = "https://github.com/shekhirin/uint", branch = "parity-scale-codec", features = ["fastrlp", "primitive-types", "parity-scale-codec"] }
zstd = "0.11.2"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false